fix(storefront): BCTHEME-1755 Videos added through the Product Editor have their thumbnails cropped compared to videos added through the page builder (#2413)

--- a/assets/scss/components/stencil/videoGallery/_videoGallery.scss
+++ b/assets/scss/components/stencil/videoGallery/_videoGallery.scss
@@ -1,10 +1,17 @@
 // =============================================================================
 // VIDEO GALLERY
 // =============================================================================
+//
+// 1. Set padding-top to zero to overwrite the padding-top contained in the
+// flex-video-container mixin, which affects the height of the video container
+// and distorts the video scale.
+//
+// -----------------------------------------------------------------------------
 
 .videoGallery-main {
     @include flex-video-container();
     margin-bottom: $videoGallery-spacing;
+    padding-top: 0; // 1
 }
 
 .videoGallery-list {
